Grid: Hover fix on Mobile Safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -21,6 +21,7 @@ body {
 
 .grid-container {
     overflow-x: scroll;
+    max-height: 100%;
     margin: 6px;
 }
 
